...
                },
                title = { },
                colors = TopAppBarDefaults.topAppBarColors(),
            )
        },
    ) {
        Product(
            product = product,
            taxStatement = taxStatement,
            canAdd = canAdd,
            quantity = quantity,
            selection = selection,
            onAddClicked = onAddClicked,
...
            }

            // Variants
            if (product.requiresSelection) {
                HorizontalDivider(modifier = Modifier.padding(horizontal = 16.dp))
                ProductRow(
                    label = "Variant",
                    modifier = Modifier.clickable(onClick = onExpandBottomSheet),
                ) {
                    val label =
                        selection?.label
                            ?: stringResource(com.advice.merch.R.string.select_variant)
                    Text(label, modifier = Modifier.padding(end = 16.dp))
...
