<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  Product Details  -->
    <string name="add_to_cart_disabled">Select an option</string>
    <string name="add_to_cart">Add to list</string>

    <!--  Stock Statuses  -->
    <string name="select_variant">-</string>

    <!-- Out of stock -->
    <string name="out_of_stock_dialog_title">Out of stock</string>
    <string name="out_of_stock_dialog_message">%1$s is no longer available and has become out of stock.</string>
    <string name="out_of_stock_dialog_dismiss">OK</string>

    <!-- Accessibility -->
    <string name="cd_increase_quantity">Increase quantity</string>
    <string name="cd_decrease_quantity">Decrease quantity</string>
    <string name="cd_remove_from_cart">Remove from cart</string>
    <string name="cd_options">Options</string>
    <string name="cd_qr_code">QR Code: %1$s</string>
    <string name="cd_out_of_stock">Out of stock</string>
</resources>
