...
                            onDismiss = onDismiss,
                        )

                        val itemCount = state.data.cart.sumOf { it -> it.quantity }
                        if (itemCount > 0) {
                            LabelButton(
                                label = "View List ($itemCount)",
                                onClick = onSummaryClicked,
                                modifier =
                                    Modifier
                                        .align(Alignment.BottomCenter)
                                        .padding(16.dp)
                                        .fillMaxWidth(),
...
